--- a/KustomerChat.xcframework/Info.plist
+++ b/KustomerChat.xcframework/Info.plist
@@ -22,6 +22,8 @@
 			<string>simulator</string>
 		</dict>
 		<dict>
+			<key>BitcodeSymbolMapsPath</key>
+			<string>BCSymbolMaps</string>
 			<key>DebugSymbolsPath</key>
 			<string>dSYMs</string>
 			<key>LibraryIdentifier</key>
