--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,41 +1,43 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
-
-# For a detailed guide to building and testing on iOS, read the docs:
-# https://circleci.com/docs/testing-ios/
+# .circleci/config.yml
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/jobs-steps/#jobs-overview & https://circleci.com/docs/configuration-reference/#jobs
-jobs:
-  build:
-    # Specify the execution environment. 
-    # See: https://circleci.com/docs/executor-intro/ & https://circleci.com/docs/configuration-reference/#executor-job
-    macos:
-      # Specify the Xcode version you desire here
-      # See: https://circleci.com/docs/using-macos/
-      xcode: 15.2.0 
+orbs:
+  macos: circleci/macos@2.3.2
+  gh: circleci/github-cli@2.0
 
-    # Add steps to the job
-    # See: https://circleci.com/docs/jobs-steps/#steps-overview & https://circleci.com/docs/configuration-reference/#steps
+commands:
+  configure-gpg:
     steps:
-      # Checkout the code as the first step.
-      - checkout
-      - run: pod install # Install CocoaPods dependencies
-      - run: fastlane scan # Run tests using Fastlane
+      - run:
+          name: Import GPG Key
+          command: |
+            hash gpg || brew install --cask gpg-suite-no-mail
+            echo -e $GPG_PRIVATE_KEY | gpg --batch --import
+      - run:
+          name: Configure Git for Signing Commits
+          command: |
+            git config --global user.signingkey $GPG_KEY_ID
+            git config --global commit.gpgsign true
+            git config --global user.email 'devops@kustomer.com'
+            git config --global user.name "kustomer-builds"
 
-      # Collect XML test results data to show in the UI, and save the same XML
-      # files under test-results folder in the Artifacts tab
+jobs:
+  publish-to-cocoapods:
+    macos:
+      xcode: 15.2
+    steps:
+      - checkout
+      - run:
+          name: Publish to Cocoa Pods
+          command: |
+            echo "Publish to CocoaPods"
       - store_test_results:
           path: test_output
       - store_artifacts:
           path: test_output
           destination: scan-output
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/workflows/ & https://circleci.com/docs/configuration-reference/#workflows
 workflows:
-  sample: # This is the name of the workflow, feel free to change it to better match your workflow.
-    # Inside the workflow, you define the jobs you want to run.
+  publish_to_cocoapods:
     jobs:
-      - build
+      - publish-to-cocoapods
