--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -6,4 +6,6 @@ jobs:
   call-dependency-review:
     uses: kustomer/common-workflows/.github/workflows/dependency-review.yml@main
     secrets: inherit
-
+    permissions:
+      contents: read
+      pull-requests: write
